--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,447 @@
+*{
+	padding: 0px;
+	margin: 0px;
+}
+html{
+	scroll-behavior: smooth;
+}
+body{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	line-height: 24px;
+}
+h1, h2, h3, h4, h5 ,h6{
+	font-family: 'Lato', sans-serif;
+}
+a, a:hover{
+	text-decoration: none;
+}
+.header-section{
+	width: 100%;
+}
+.top-header{
+	width: 100%;
+	padding: 10px 0px;
+	background:#f5f7fa;
+}
+.top-header .info{
+	width: 100%;
+	padding: 0px;
+	margin: 0px;
+}
+.top-header .info li{
+	list-style: none;
+	display: inline-block;
+}
+.top-header .info li a{
+	font-size: 14px;
+	font-weight: 500;
+	display: block;
+	text-decoration: none;
+	margin: 0px 0px 0px 15px;
+	color: #506a85;
+}
+.top-header .info li a .fa{
+	margin: 0px 5px 0px 0px;
+}
+.top-header .info li a:hover, .top-header .info li a:focus{
+	color: #00bc9c;
+	transition: 1s ease-in;
+}
+.top-header .social-icon{
+	width: 100%;
+	padding: 0px;
+	text-align: right;
+	margin: 0px;
+}
+.top-header .social-icon li{
+	list-style: none;
+	display: inline-block;
+}
+.top-header .social-icon li a{
+	font-size: 14px;
+	font-weight: 500;
+	display: block;
+	text-decoration: none;
+	margin: 0px 0px 0px 15px;
+	color: #506a85;
+}
+.top-header .social-icon li a:hover, .top-header .social-icon li a:focus{
+	color: #00bc9c;
+	transition: 1s ease-in;
+}
+.main-menu{
+	width: 100%;
+	padding: 20px 0px;
+}
+.main-menu .navbar-nav .nav-item .nav-link{
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin: 0px 0px 0px 40px;
+	color: #506a85;
+}
+.main-menu .navbar-nav .nav-item .nav-link:hover, .main-menu .navbar-nav .nav-item .nav-link:focus{
+	color: #00bc9c;
+	transition: 1s ease-in;
+}
+.main-menu .fa-search{
+	font-size: 14px;
+	font-weight: 700;
+	color: #506a85;
+}
+.slider{
+	width: 100;
+}
+.slider .carousel .carousel-item .carousel-caption{
+	bottom: 30%;
+	text-align: unset;
+}
+.slider .carousel .carousel-item .carousel-caption h2 {
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 62px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #fff;
+}
+.slider .carousel .carousel-item .carousel-caption p{
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #a3b1bf;
+	margin: 0px 0px 60px;
 
+}
+.slider .carousel .carousel-item .carousel-caption .btn-success{
+	padding: 15px 35px;
+	font-size: 14px;
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: 2px;
+	border-radius: 2px;
+	color: #fff;
+	background: #00bc9c;
+	border: 1px solid #00bc9c;
+	transition: 1s;
+}
+.slider .carousel .carousel-item .carousel-caption .btn-success:hover, .slider .carousel .carousel-item .carousel-caption .btn-success:focus{
+	color: #00bc9c;
+	background: transparent;
+	border: 1px solid #00bc9c;
+}
+.slider .carousel .carousel-item .text-right{
+	text-align: right;
+}
+.slider .carousel .carousel-item .text-right p{
+	color: #fff;
+}
+.slider .carousel .carousel-item .carousel-caption h2 span{
+	background: #506a85;
+	line-height: 66px;
+}
+.slider .carousel .carousel-item .carousel-caption .carousel-item .showcase{
+	bottom: 40%;
+}
+/*who-we-are section code start*/
+.who-we-are{
+	width: 100%;
+	padding: 80px 0px;
+}
+.who-we-are .title{
+	width: 100%;
+	padding: 0px 0px 15px;
+	text-align: center;
+}
+.who-we-are .title h1{
+	font-size: 52px;
+    font-weight: 700;
+    line-height: 62px;
+    letter-spacing: 2px;
+    color: #506a85;
+}
+.who-we-are .title p{
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #506a85;
+}
+.who-we-are .img-icon{
+
+}
+.who-we-are .img-icon img{
+
+}
+.who-we-are .inner-icon{
+	width: 100%;
+	padding: 0px 20px;
+}
+.who-we-are .who-title{
+	font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+    color: #506a85;
+}
+.who-we-are .who-text{
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 400;
+	color: #73879c;
+}
+/*letest work code start*/
+
+.letest-work{
+	width: 100%;
+	padding: 80px 0px;
+	background: #f2f5f7;
+}
+.letest-work .title{
+	width: 100%;
+	padding: 0px 0px 40px;
+	text-align: center;
+}
+.letest-work .title h1{
+	font-size: 52px;
+    font-weight: 700;
+    line-height: 62px;
+    letter-spacing: 2px;
+    color: #506a85;
+}
+.letest-work .title p{
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #73879c;
+}
+.letest-work .card{
+	border-radius: 5px;
+	border: 1px solid #eee;
+}
+.letest-work .card .card-body{
+	width: 100%;
+	text-align: center;
+	padding: 25px 0px;
+}
+
+}
+ .letest-work .card .card-img-top {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+.letest-work .card .card-title{
+	font-size: 22px;
+    font-weight: 600;
+    line-height: 32px;
+    color: #506a85;
+    margin: 0px 0px 3px;
+}
+.letest-work .card .card-text{ 
+	font-size: 14px; 
+	line-height: 24px;
+	font-weight: 500;
+	color: #73879c;
+}
+.letest-work .owl-carousel{
+	width: 100%;
+	margin: 80px 0px 0px;
+}
+.letest-work .owl-theme .owl-nav.disabled+.owl-dots {
+    margin-top: 30px;
+}
+.letest-work .owl-theme .owl-dots .owl-dot.active span, .letest-work .owl-theme .owl-dots .owl-dot:hover span{
+	background: #00bc9c;
+}
+.letest-work .owl-theme .owl-dots .owl-dot span {
+    width: 15px;
+    height: 15px;
+    margin: 5px 7px;
+    background: #506a85;
+}
+/*get-in code start*/
+.get-in{
+	width: 100%;
+	padding: 80px 0px;
+}
+.get-in .title{
+	width: 100%;
+	padding: 0px 0px 40px;
+	text-align: center;
+}
+.get-in .title h1{
+	font-size: 52px;
+    font-weight: 700;
+    line-height: 62px;
+    letter-spacing: 2px;
+    color: #506a85;
+    margin: 0px 0px 20px; 
+}
+.get-in .title p{
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #73879c;
+	margin: 0px 0px 40px; 
+}
+.get-in .btn-success{
+	padding: 15px 35px;
+	font-size: 14px;
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: 2px;
+	border-radius: 2px;
+	color: #fff;
+	background: #00bc9c;
+	border: 1px solid #00bc9c;
+	transition: 1s;
+}
+.get-in .btn-success:hover, .get-in .btn-success:focus{
+	color: #00bc9c !important;
+	background:transparent !important;
+	border: 1px solid #00bc9c !important;
+}
+.footer{
+	width: 100%;
+}
+.footer .widget-section{
+	width: 100%;
+	padding: 80px 0px;
+	background: #2f4052;
+}
+.footer .widget{
+	width: 100%
+}
+.footer .widget h4{
+	font-size: 18px;
+	line-height: 28px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	color: #fff;
+	margin: 0px 0px 15px;
+}
+.footer .widget .flogo{
+	margin: 0px 0px 10px;
+}
+.footer .widget p{
+	font-size: 14px;
+	line-height: 24px;
+	color: #a3b1bf;
+	padding: 10px 2px 0px 0px;
+}
+.footer .widget .btn-link{
+	padding: 0px;
+	text-decoration: none;
+	font-size: 16px;
+	font-weight: 700;
+	color: #a3b1bf;
+}
+.footer .widget .btn-link:hover, .footer .widget .btn-link:focus{
+	color: #00bc9c;
+}
+.footer .widget .btn-link .fa-long-arrow-right{
+	margin: 0px 0px 0px 25px;
+}
+.padd{
+	padding: 3px !important;
+}
+.widget-inner{
+	width: 100%;
+	padding: 10px 20px 0px 0px;
+}
+.widget ul{
+	padding: 0px;
+	margin: 15px 0px 0px;
+}
+.widget ul li{
+	list-style: none;
+	font-size: 14px;
+	line-height: 24px;
+	margin: 0px 0px 5px;
+	color: #a3b1bf;
+}
+.footer .widget .fa {
+	padding: 0px 5px 0px 0px;
+}
+.widget .subscribe{
+	width: 100%;
+	position: relative;
+}
+.widget .subscribe .form-control {
+    background: #4e5c6c;
+    border: 1px solid #4e5c6c;
+    padding: 15px;
+    font-size: 14px;
+    color: #828e99;
+}
+.widget .subscribe .form-control:focus{
+	box-shadow: 0 0 0 0.1rem;
+}
+.widget .subscribe .btn-success {
+    position: absolute;
+    top: 10%;
+    right: 2px;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #fff;
+    border: 1px solid #00bc9c;
+    background: #00bc9c;
+    padding: 10px 15px;
+}
+.widget .subscribe .btn-success:hover, .widget .subscribe .btn-success:focus{
+	color: #00bc9c;
+	border: 1px solid #00bc9c;
+    background: transparent;
+}
+.main-footer{
+	width: 100%;
+	padding: 20px 0px;
+	margin: 0px;
+	background: #283645;
+	position: relative;
+}
+.main-footer .copyright p{
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #707e8c;
+	margin: 5px 0px;
+}
+.main-footer .footer-nav{
+	width: 100%;
+	padding: 0px;
+	margin: 5px 0px;
+}
+.main-footer .footer-nav li{
+	list-style: none;
+	display: inline-block;
+	margin: 0px 5px 0px
+}
+.main-footer .footer-nav li a{
+	font-size: 14px;
+	font-weight:500;
+	text-decoration: none;
+	color: #5e6c7a;
+}
+.main-footer .footer-nav .fa-circle{
+	font-size: 5px;
+    margin: 0px 5px 0px;
+}
+.main-footer .btn-info{
+	font-size: 14px;
+    font-weight: 600;
+    position: absolute;
+    right: 19px;
+    bottom: 21px;
+    color: #949ba2;
+    background: #3c5065;
+    border: 2px solid #3c5065;
+    padding: 2px 9px;
+    border-radius: 2px;
+    transition: 1s;
+}
+.main-footer .btn-info:hover, .main-footer .btn-info:focus{
+	color: #00bc9c;
+    background: transparent;
+    border: 1px solid #00bc9c;
+}
